# seed_prediction

./: .env.samples  README.md  pyproject.toml
notebook/: treinamento.ipynb
requirements/: IA.in  IA.txt  all.in  all.txt  api.in  api.txt  dev.in  dev.txt  train.txt
seed_prediction/: __main__.py  cli.py  config.py  routes.py  webapi.py
seed_prediction/model/: network_architecture.py
seed_prediction/train/: pipeline.py
sementes_ai/: __main__.py  cli.py  config.py  routes.py  webapi.py
sementes_ai/model/: modelo_classificacao.torch  network_architecture.py
sementes_ai/train/: pipeline.py
treinamento/modelo_treinado/: modelo_classificacao.torch
